--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
     background-repeat: no-repeat;
     padding-left: 5%;
     padding-top: 5px;
-
-
 }
 
 .sabbir {
@@ -24,13 +22,11 @@ h1 {
     font-size: 45px;
 }
 
-.img {
-    width: 50%
-}
 
 .my-protfolio {
-    width: 50%;
-    margin-left: 10px;
+
+    margin-left: 20px;
+
 
 }
 
@@ -41,4 +37,14 @@ h1 {
     border-radius: 4px;
     color: white;
     font-weight: 900;
+}
+
+.img-2 {
+    width: 500px;
+    margin-left: 200px;
+}
+
+.para {
+    width: 500px;
+
 }
